bk_ida/gccida/c3/ix86_expand_epilogue
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_expand_epilogue/src/i386.c:4857:22: error: use of undeclared identifier 'machine_mode'
v37 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) == 0) ^ 5), i); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_expand_epilogue/src/i386.c:4957:21: error: use of undeclared identifier 'machine_mode'
v9 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 2); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_expand_epilogue/src/i386.c:4961:31: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v10, global_rtl[4], v9); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_expand_epilogue/src/i386.c:4965:22: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), global_rtl[4]); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_expand_epilogue/src/i386.c:4971:31: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v10, global_rtl[2], v9); 
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_expand_epilogue/src/obj/i386.o] Error 1
